[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bytetrack"
version = "0.0.1"

description = "BYTE Tracker."

requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "opencv_python",
  "numpy",
  "lapx",
]
